--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
 
 
 
-<h2 style="text-align: center;margin-top:40px;"> How to Book – 4 Easy Steps to Your Ride 🛵
+<h2 style="text-align: center;margin-top:50px; margin-bottom: 50px;"> How to Book – 4 Easy Steps to Your Ride 🛵
 </h1>
-    <div class="container mt-4">
+    <div class="container">
         <div class="row align-items-center">
             <!-- Left Section -->
              <div class="col-md-1"></div>
