--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
 
 
-<h2 style="text-align: center;margin-top:50px; margin-bottom: 50px;"> How to Book – 4 Easy Steps to Your Ride 🛵
+<h2 style="text-align: center;margin-top:50px; margin-bottom: 50px;font-weight: 700;"> How to Book – 4 Easy Steps to Your Ride 🛵
 </h1>
     <div class="container">
         <div class="row align-items-center">
