--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <li class="dropdown">
               <a href="#">Resources</a>
               <ul class="dropdown-menu">
-                <li><a href="#">Blog</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="#">FAQs</a></li>
               </ul>
             </li>
