--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
       
           <div class="nav-container">
             <ul class="nav-links">
-                <li><a href="#" class="active">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Bike Tariffs</a></li>
                 <li><a href="#">Store</a></li>
