--- a/blogdetails.html
+++ b/blogdetails.html
@@ -44,7 +44,7 @@
       
           <div class="nav-container">
             <ul class="nav-links">
-                <li><a href="#" class="active">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Bike Tariffs</a></li>
                 <li><a href="#">Store</a></li>
@@ -55,7 +55,7 @@
                 <li class="dropdown">
                   <a href="#">Resources</a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="#">FAQs</a></li>
                   </ul>
                 </li>
